config tweaking