@@ -784,6 +784,7 @@
                     <configuration>
                         <forkCount>${forks}</forkCount>
                         <reuseForks>true</reuseForks>
+                        <argLine>-Djdk.tracePinnedThreads=full</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
